--- a/profesores.html
+++ b/profesores.html
@@ -106,58 +106,43 @@
 
   <main class="contenedor-profes">
     <div class="profesor">
-      <img src="https://images.unsplash.com/photo-1607746882042-944635dfe10e?auto=format&fit=crop&w=800&q=60" alt="Profesor 1">
+      <img src="" alt="Profesor 1">
       <div class="profesor-info">
-        <h3>Laura Gómez</h3>
-        <h4>Diseño Web</h4>
-        <p>Apasionada por el diseño moderno y la usabilidad. Enseña a sus alumnos cómo hacer webs funcionales y atractivas.</p>
+        <h3>Cristian Conci</h3>
+        <h4>TIA/Club de Ciencias/Formacion Específica</h4>
+        <p>Profesor de las multiples materias de la formacion especifica en ciclo basico y parte de ciclo orientado</p>
       </div>
     </div>
 
     <div class="profesor">
-      <img src="https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?auto=format&fit=crop&w=800&q=60" alt="Profesor 2">
+      <img src="" alt="Profesor 2">
       <div class="profesor-info">
-        <h3>Martín Pérez</h3>
-        <h4>Programación</h4>
-        <p>Desarrollador con experiencia en front-end y back-end. Fomenta la lógica y la resolución creativa de problemas.</p>
+        <h3>Santiago Lazcano</h3>
+        <h4>Programación / Testing / Club de Ciencias</h4>
+        <p>Profesor de programación en 5to año y testing en 6to año</p>
       </div>
     </div>
 
     <div class="profesor">
-      <img src="https://images.unsplash.com/photo-1595152772835-219674b2a8a6?auto=format&fit=crop&w=800&q=60" alt="Profesor 3">
+      <img src="" alt="Profesor 3">
       <div class="profesor-info">
-        <h3>Silvia López</h3>
-        <h4>Robótica</h4>
-        <p>Especialista en automatización y tecnología educativa. Promueve el aprendizaje práctico mediante la experimentación.</p>
+        <h3>Pablo Batola</h3>
+        <h4>Programacion</h4>
+        <p>Profesor de programación de 6to año</p>
       </div>
     </div>
 
     <div class="profesor">
       <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?auto=format&fit=crop&w=800&q=60" alt="Profesor 4">
       <div class="profesor-info">
-        <h3>Carlos Medina</h3>
-        <h4>Diseño Gráfico</h4>
-        <p>Combina creatividad y técnica para enseñar cómo comunicar visualmente con impacto y coherencia estética.</p>
+        <h3>Andres Bianchi</h3>
+        <h4>Almacenamiento de datos y etica y legislacion</h4>
+        <p></p>
       </div>
     </div>
 
-    <div class="profesor">
-      <img src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?auto=format&fit=crop&w=800&q=60" alt="Profesor 5">
-      <div class="profesor-info">
-        <h3>Valentina Torres</h3>
-        <h4>Marketing</h4>
-        <p>Profesional del marketing digital enfocada en estrategias de contenido y redes sociales para proyectos reales.</p>
-      </div>
-    </div>
-
-    <div class="profesor">
-      <img src="https://images.unsplash.com/photo-1522075469751-3a6694fb2f61?auto=format&fit=crop&w=800&q=60" alt="Profesor 6">
-      <div class="profesor-info">
-        <h3>Federico Ramos</h3>
-        <h4>Electrónica</h4>
-        <p>Ingeniero apasionado por la innovación tecnológica. Enseña a construir circuitos y proyectos funcionales desde cero.</p>
-      </div>
     </div>
   </main>
 </body>
 </html>
+
