--- a/profesores.html
+++ b/profesores.html
@@ -133,7 +133,7 @@
     </div>
 
     <div class="profesor">
-      <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?auto=format&fit=crop&w=800&q=60" alt="Profesor 4">
+      <img src="" alt="Profesor 4">
       <div class="profesor-info">
         <h3>Andres Bianchi</h3>
         <h4>Almacenamiento de datos y etica y legislacion</h4>
@@ -145,4 +145,5 @@
   </main>
 </body>
 </html>
+
 
